--- a/crates/filestorage/Cargo.toml
+++ b/crates/filestorage/Cargo.toml
@@ -5,3 +5,6 @@ edition.workspace = true
 
 [dependencies]
 filestorage-core.workspace = true
+axum.workspace = true
+tokio.workspace = true
+serde = { version = "1.0", features = ["derive"] }
